2018-08-15  Marc A. Smith  <marc.smith@parodyne.com>

	Merge branch 'prof_ed_prep'

2018-08-13  Marc A. Smith  <marc.smith@parodyne.com>

	updated the "win_binaries" package to only include Windows tools that are now required; removed support for inlining RAID CLI tools from the install.sh and install.vbs installer scripts

2018-08-12  Marc A. Smith  <marc.smith@parodyne.com>

	added the 'raid_tools.py' script to handle installing propietary RAID CLI tools from the shell

2018-08-09  Marc A. Smith  <marc.smith@parodyne.com>

	web_ui.chroot: include a file in /etc/sudoers.d/ for the web UI stuff; rc.rpcagent: fixed typo in start(); added the 'install_lic.sh' script to assist web UI installing a new license

2018-08-08  Marc A. Smith  <marc.smith@parodyne.com>

	fixed typo in enable-commercial block of Makefile; fixed new image file name path in install.sh script

2018-08-01  Marc A. Smith  <marc.smith@parodyne.com>

	many TUI updates for -DCOMMERCIAL including RPC agent and web UI status labels, IP adddress list, and license file status, all with actual data -- currently only refreshs data at start

2018-07-31  Marc A. Smith  <marc.smith@parodyne.com>

	we now use two different package names for ESOS Professional (esos_prof) and ESOS Community (esos_comm); updates to the TUI for the Commercial variant that shows RPC agent and web UI service stats

2018-07-29  Marc A. Smith  <marc.smith@parodyne.com>

	updated license file names (GPL and commercial); added the '--enable-commercial' build time option; updated branding in config files and TUI to use ESOS Professional / Community

2018-07-26  Marc A. Smith  <marc.smith@parodyne.com>

	Merge branch 'agent_prep'

	removed default stunnel.conf file (and directory); set stunnel.chroot as a dep for rpc_agent.chroot; updated stunnel.chroot to install an example config file

2018-07-24  Marc A. Smith  <marc.smith@parodyne.com>
