@@ -216,3 +216,4 @@ f3eeaed018542963b7d2416ef1135ecc  libevent-2.1.8-stable.tar.gz
 c1635a5a83b63aca7f97a3eab39ebaa6  kbd-2.0.4.tar.xz
 fc18afa0f14a25475cf097ee102a3e4f  pcre-8.42.tar.gz
 2d856aca3dfe1d32e3c9f8c4cac0cc95  nginx-1.14.0.tar.gz
+07a1050db1a898e9a2e03b0c4569c4bd  dosfstools-4.1.tar.xz
